--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -32,7 +32,7 @@ body {
     height: calc(100vh - 80px);
     padding: 1.5rem;
     position: fixed;
-    left: 85px;
+    left: 2rem; /* Align with container padding */
     top: 80px;
     z-index: 1051;
 }
@@ -90,7 +90,7 @@ body {
 
 /* Main Content */
 .admin-main {
-    margin-left: 250px;
+    margin-left: calc(250px + 2rem); /* Account for sidebar width + left positioning */
     padding: 1rem 2rem 2rem 2rem;
     height: 100vh;
     margin-top: 0;
