sửa tên thanh search từ nhà thành phòng

--- a/templates/home.html
+++ b/templates/home.html
@@ -649,24 +649,24 @@ input[type="time"][data-has-value="true"]::-webkit-datetime-edit-ampm-field {
                     </div>
                 </div>
                 <div class="col-xxl-1 col-xl-2 col-lg-2 col-md-3">
-                    <label for="checkin-hourly" class="form-label">Ngày nhận nhà</label>
+                    <label for="checkin-hourly" class="form-label">Ngày nhận phòng</label>
                     <div class="date-input-wrapper">
                         <input type="date" class="form-control" id="checkin-hourly" name="checkin_date">
-                        <div class="custom-placeholder" data-for="checkin-hourly">Chọn ngày nhận nhà</div>
+                        <div class="custom-placeholder" data-for="checkin-hourly">Chọn ngày nhận phòng</div>
                     </div>
                 </div>
                 <div class="col-xxl-1 col-xl-1 col-lg-2 col-md-3">
-                    <label for="checkin-time-hourly" class="form-label">Giờ nhận nhà</label>
+                    <label for="checkin-time-hourly" class="form-label">Giờ nhận phòng</label>
                     <div class="time-input-wrapper">
                         <input type="time" class="form-control" id="checkin-time-hourly" name="checkin_time">
-                        <div class="custom-placeholder" data-for="checkin-time-hourly">Chọn giờ nhận</div>
+                        <div class="custom-placeholder" data-for="checkin-time-hourly">Chọn giờ nhận phòng</div>
                     </div>
                 </div>
                 <div class="col-xxl-1 col-xl-1 col-lg-2 col-md-3">
-                    <label for="checkout-time-hourly" class="form-label">Giờ trả nhà</label>
+                    <label for="checkout-time-hourly" class="form-label">Giờ trả phòng</label>
                     <div class="time-input-wrapper">
                         <input type="time" class="form-control" id="checkout-time-hourly" name="checkout_time">
-                        <div class="custom-placeholder" data-for="checkout-time-hourly">Chọn giờ trả</div>
+                        <div class="custom-placeholder" data-for="checkout-time-hourly">Chọn giờ trả phòng</div>
                     </div>
                 </div>
                 <div class="col-xxl-4 col-xl-4 col-lg-3 col-md-3">
@@ -720,17 +720,17 @@ input[type="time"][data-has-value="true"]::-webkit-datetime-edit-ampm-field {
                     </div>
                 </div>
                 <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3">
-                    <label for="checkin-daily" class="form-label">Ngày nhận nhà</label>
+                    <label for="checkin-daily" class="form-label">Ngày nhận phòng</label>
                     <div class="date-input-wrapper">
                         <input type="date" class="form-control" id="checkin-daily" name="checkin_date">
-                        <div class="custom-placeholder" data-for="checkin-daily">Chọn ngày nhận nhà</div>
+                        <div class="custom-placeholder" data-for="checkin-daily">Chọn ngày nhận phòng</div>
                     </div>
                 </div>
                 <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3">
-                    <label for="checkout-daily" class="form-label">Ngày trả nhà</label>
+                    <label for="checkout-daily" class="form-label">Ngày trả phòng</label>
                     <div class="date-input-wrapper">
                         <input type="date" class="form-control" id="checkout-daily" name="checkout_date">
-                        <div class="custom-placeholder" data-for="checkout-daily">Chọn ngày trả nhà</div>
+                        <div class="custom-placeholder" data-for="checkout-daily">Chọn ngày trả phòng</div>
                     </div>
                 </div>
                 <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-6">
