--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -2739,7 +2739,7 @@ nav[aria-label="Page navigation"] {
                                     <tr>
                                         <th>Tên phòng</th>
                                         <th>Địa chỉ</th>
-                                        <th>Giá/đêm</th>
+                                        <th>Giá/ngày</th>
                                         <th>Trạng thái</th>
                                         <th>Đánh giá</th>
                                     </tr>
