--- a/templates/owner/book_home.html
+++ b/templates/owner/book_home.html
@@ -29,7 +29,7 @@
                             <p><strong>Giá theo giờ:</strong> {{ "{:,.0f}".format(home.price_per_hour) }}đ/giờ</p>
                             {% endif %}
                             {% if home.price_per_night %}
-                            <p><strong>Giá theo đêm:</strong> {{ "{:,.0f}".format(home.price_per_night) }}đ/đêm</p>
+                            <p><strong>Giá theo đêm:</strong> {{ "{:,.0f}".format(home.price_per_night) }}đ/ngày</p>
                             {% endif %}
                         </div>
                         <div class="col-md-6">
