--- a/templates/renter/book_home.html
+++ b/templates/renter/book_home.html
@@ -26,7 +26,7 @@
                 <p class="card-text">
                   <span class="badge bg-primary">{{ home.home_type }}</span>
                   <span class="badge bg-info">{{ home.max_guests }} guests</span>
-                  <span class="badge bg-success">{{ "{:,.0f}".format(home.price_per_night) }}đ/đêm</span>
+                  <span class="badge bg-success">{{ "{:,.0f}".format(home.price_per_night) }}đ/ngày</span>
                 </p>
               </div>
             </div>
