--- a/templates/renter/view_home_detail.html
+++ b/templates/renter/view_home_detail.html
@@ -661,7 +661,7 @@
                         {% if home.price_per_hour and home.price_per_night %} | {% endif %}
                     {% endif %}
                     {% if home.price_per_night %}
-                        <span style="color: #4a5568; font-weight: 600;">{{ "{:,.0f}".format(home.price_per_night) }}đ/đêm</span>
+                        <span style="color: #4a5568; font-weight: 600;">{{ "{:,.0f}".format(home.price_per_night) }}đ/ngày</span>
                     {% endif %}
                 </div>
             </div>
