--- a/templates/admin/owner_detail.html
+++ b/templates/admin/owner_detail.html
@@ -586,7 +586,7 @@ nav.navbar {
                             <tr>
                                 <th>Tên phòng</th>
                                 <th>Địa chỉ</th>
-                                <th>Giá/đêm</th>
+                                <th>Giá/ngày</th>
                                 <th>Trạng thái</th>
                                 <th>Đánh giá</th>
                             </tr>
